--- a/docs/000-操作系统/001-文件和目录/001-文件系统.md
+++ b/docs/000-操作系统/001-文件和目录/001-文件系统.md
@@ -1,4 +1,78 @@
 # 文件系统
-文件系统是由目录和文件组成的层次结构，所有的东西起始于根(/)目录
+
+**文件系统**是由**目录**和**文件**组成的层次结构，所有的东西起始于根(/)目录
 
 ---
+
+## 目录
+
+**目录**是一个包含**目录项**的文件；每个目录项都包含一个**文件名**，以及包含该**文件属性**的信息。
+
+---
+
+
+## 文件
+目录中文件的名字。
+
+---
+
+## 打印目录中的文件名
+代码示例
+```cpp
+#include <iostream>
+#include <dirent.h>
+
+using namespace std;
+
+int main(int argc, char **argv)
+{
+    // 指向一个打开的目录
+    DIR *dp;
+
+    // 指向一个目录项
+    struct dirent *dirp;
+
+    if (argc != 2)
+    { // 检查参数
+        cerr << "要指定需要扫描的目录" << endl;
+        return 0;
+    }
+
+    if ((dp = opendir(argv[1])) == nullptr)
+    { // 打开目录
+        cerr << "打开目录失败" << endl;
+    }
+
+    while ((dirp = readdir(dp)) != nullptr)
+    { // 读取目录项
+        cout << dirp->d_name << endl;
+    }
+
+    // 关闭目录项
+    closedir(dp);
+}
+```
+运行效果
+``` cpp
+/tmp/cpps/build/cpps /usr/local/mysql/
+
+lib
+data
+include
+README-test
+mysql-test
+bin
+my-3306.cnf
+.
+docs
+man
+..
+LICENSE
+support-files
+README
+LICENSE-test
+start.sh
+share
+```
+---
+
