--- a/docs/002-数据库/002-redis/001-基本操作/002-检查.md
+++ b/docs/002-数据库/002-redis/001-基本操作/002-检查.md
@@ -1,25 +1,29 @@
 ## 检查一个键是否存在
 ```redis
 
-# 当给定的键存在时返回 1
+// 当给定的键存在时返回 1
 127.0.0.1:6379> exists name
 (integer) 1
 
-# 当给定的键不存在时返回 0
+// 当给定的键不存在时返回 0
 127.0.0.1:6379> exists not:exists:key
 (integer) 0
 127.0.0.1:6379>
 ```
+
 ---
 
 ## 检查一个键的类型
+
 ```redis
 127.0.0.1:6379> type name
 string
 ```
+
 ---
 
 ## 检查一个键的内存使用情况
+
 ```
 # 返回给定键占用了多少内存
 127.0.0.1:6379> memory usage name
@@ -29,4 +33,5 @@ string
 debug object name
 Value at:0x13163f7c0 refcount:1 encoding:embstr serializedlength:5 lru:1297095 lru_seconds_idle:15
 ```
+
 ---
