--- a/docs/003-投资/2023/2023-10-投资记录.md
+++ b/docs/003-投资/2023/2023-10-投资记录.md
@@ -1,7 +1,7 @@
 # 2023-10-投资记录
 
 ## 2023-10 月度收益
-2023-10 这个月消我关注的几只消费股，进入了合理区间，建仓了两只。 主要的资金还是在持续的投入银行和电力。 10 月的收益如下。
+2023-10 这个月，我关注的几只消费股，进入了合理区间，建仓了两只。 主要的资金还是在持续的投入银行和电力。 10 月的收益如下。
 
 ![](./images/2023-10.jpg)
 
